force-app/main/default/objects/Time_Coefficient__c/Time_Coefficient__c.object-meta.xml
<CustomObject>
    <label>Time Coefficient</label>
    <nameField>
        <displayFormat>TC-{0000000}</displayFormat>
        <label>Time Coefficient Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time Coefficients</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>