force-app/main/default/objects/Time_Coefficient__c/fields/Time_Coefficient__c.field-meta.xml
<CustomField>
    <fullName>Time_Coefficient__c</fullName>
    <label>Time Coefficient</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>